# name-ranking

./: .copier-answers.yml  .droid  .gitignore  .gitmodules  .pre-commit-config.yaml  INTEGRATION_TEST_REPORT.md  README.md  TESTING_PATTERNS_RESEARCH.md  classify_origins.py  data_loader.py  database.py  elo.py  flake.nix  init_database.py  main.py  pronounceability_features_research.md  pyproject.toml  similarity.py  test_ethnidata.py  ui.py  utils.py  uv  zensical.toml
.github/workflows/: docs.yml
docs/: .docs-style-checklist.md  active_learning.md  architecture.md  features.md  index.md  tutorial.md
scripts/: benchmark_classification.py  check_phonetic.py  classify_1000.py  classify_5000.py  classify_all.py  classify_names.py  classify_remaining.py  final_stats.py  take_screenshots.py  test_classify.py
site/: index.html
site/active_learning/: index.html
site/architecture/: index.html
site/assets/javascripts/: bundle.00c35305.min.js
site/assets/javascripts/workers/: search.e2d2d235.min.js
site/assets/stylesheets/classic/: main.70d17ad7.min.css  palette.7dc9a0ad.min.css
site/assets/stylesheets/modern/: main.f1b6466b.min.css  palette.dfe2e883.min.css
src/: .skylos_trace
src/st_name_ranking/: __init__.py  _compat.py  app_actions.py  async_model.py  background_queue.py  classify_origins.py  cli.py  data_loader.py  database.py  database_io.py  feature_cache.py  feature_store.py  features.py  init_database.py  main.py  model.py  model_service.py  name_normalization.py  name_queue.py  origin_classifier.py  origin_classifier.py,cover  pair_queue.py  pair_selection.py  phonetic_similarity.py  similarity.py  sync_store.py  tournament_orchestration.py  types.py  ui.py  utils.py
src/st_name_ranking/active_learning/: __init__.py  lazy_updates.py  phonetic_similarity.py  queue.py  selection.py
src/st_name_ranking/classification/: __init__.py  classify_origins.py  origin_classifier.py
src/st_name_ranking/commands/: __init__.py  cli.py  init_database.py
src/st_name_ranking/interface/: __init__.py  app_actions.py  filter_state.py  filter_ui.py  main.py  name_queue.py  rankings_data.py  rankings_ui.py  similarity.py  similarity_ui.py  tournament_orchestration.py  tournament_session.py  tournament_ui.py  ui.py  ui_support.py
src/st_name_ranking/learning/: __init__.py  features.py  model.py  name_queue.py  pair_selection.py
src/st_name_ranking/persistence/: __init__.py  connection.py  data_loader.py  database.py  database_io.py  feature_cache.py  feature_store.py  name_store.py  preference_stats_store.py  ratings_store.py  region_store.py  settings_store.py  stats_store.py  sync_store.py
st_name_ranking/: __init__.py  classify_origins.py  cli.py  data_loader.py  database.py  init_database.py  main.py  similarity.py  ui.py  utils.py
tests/: __init__.py  conftest.py  ruff.toml  test_active_learning_queue.py  test_classification_integration.py  test_classify_origins.py  test_classify_origins_integration.py  test_cli.py  test_cli_command_structure.py  test_cli_integration.py  test_concurrent_integration.py  test_core_workflow_integration.py  test_data_loader.py  test_data_loader_integration.py  test_data_loading_integration.py  test_database.py  test_db_model_integration.py  test_e2e_workflows.py  test_elo.py  test_error_handling_integration.py  test_feature_model_integration.py  test_init_database_integration.py  test_integration_playwright.py  test_main_integration.py  test_model_integration.py  test_origin_classifier_integration.py  test_performance.py  test_performance_playwright.py  test_phonetic_active_learning_integration.py  test_phonetic_similarity_integration.py  test_preference_stats.py  test_similarity.py  test_streamlit_integration.py  test_ui.py  test_ui_integration.py  test_utils.py
tests/browser/: __init__.py  test_integration_playwright.py  test_performance_playwright.py  test_tournament_e2e.py
tests/e2e/: test_e2e_workflows.py
tests/integration/: test_classification_integration.py  test_classify_origins_integration.py  test_cli_integration.py  test_concurrent_integration.py  test_core_workflow_integration.py  test_data_loader_integration.py  test_data_loading_integration.py  test_db_model_integration.py  test_error_handling_integration.py  test_feature_model_integration.py  test_init_database_integration.py  test_model_integration.py  test_origin_classifier_integration.py  test_phonetic_active_learning_integration.py  test_phonetic_similarity_integration.py  test_streamlit_integration.py  test_ui_integration.py
tests/performance/: test_performance.py
tests/unit/: test_active_learning_queue.py  test_active_learning_selection.py  test_canonical_module_imports.py  test_classify_origins.py  test_cli.py  test_compat.py  test_data_loader.py  test_database.py  test_interface_data_helpers.py  test_lazy_updates.py  test_main_flow.py  test_name_queue.py  test_persistence_stores.py  test_preference_stats_store.py  test_ratings_store.py  test_tournament_orchestration.py  test_tournament_ui_guard.py  test_ui.py  test_utils.py
tests/unit/active_learning/: test_lazy_updates.py  test_queue.py  test_selection.py
tests/unit/classification/: test_classify_origins.py
tests/unit/cli/: test_cli.py  test_command_structure.py
tests/unit/core/: test_canonical_module_imports.py  test_similarity.py  test_utils.py
tests/unit/interface/: test_name_queue.py  test_rankings_ui.py  test_tournament_orchestration.py  test_tournament_ui_guard.py  test_ui_support.py
tests/unit/learning/: test_features.py  test_model_cache.py
tests/unit/persistence/: test_database.py  test_name_store.py  test_preference_stats.py  test_region_store.py  test_settings_store.py  test_stats_store.py
