[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "poethepoet>=0.40.0",
  "ruff>=0.14.13",
  "prek>=0.2.29",
  "commitizen>=4.11.6",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-playwright>=0.7.2",
  "playwright==1.56.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
  "pytest-timeout>=2.4.0",
  "pytest-asyncio>=1.3.0",
  "ipython>=9.9.0",
  "ty>=0.0.12",
  "mkdocstrings-python>=2.0.1",
  "zensical>=0.0.16"
]

[project]
name = "st-name-ranking"
version = "0.1.0"
description = "Streamlit application to rank valid danish names"
readme = "README.md"
authors = [
  {name = "Jakob Stender Guldberg", email = "jakob1379@gmail.com"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
  "httpx>=0.28.1",
  "ethnidata>=4.1.1",
  "numpy>=2.4.1",
  "pandas>=2.3.3",
  "rapidfuzz>=3.14.3",
  "metaphone",
  "pyphen>=0.17.2",
  "rich>=14.2.0",
  "sentence-transformers>=5.2.0",
  "streamlit>=1.53.0",
  "typer>=0.21.1"
]

[project.scripts]
name-db = "st_name_ranking.cli:app"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.poe.tasks]
clean = {shell = 'uvx pyclean -d=all --verbose .', help = "Clean python residuals"}
upgrade = {shell = 'uv sync --upgrade && uvx uv-bump; uvx prek autoupdate'}
htmlcov = "uv run python -m http.server -d htmlcov"
serve = "streamlit run src/st_name_ranking/main.py"

[tool.pyrefly]
python-version = "3.13"
search-path = ["src"]

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--cov=st_name_ranking", "--cov-branch", "--cov-report=term-missing", "--cov-report=html", "--headed", "--exitfirst"]
testpaths = ["tests"]

[tool.ruff]
# if this is a library, enter the _minimum_ version you
# want to support, otherwise do py313
target-version = "py313"
line-length = 120 # use whatever number makes you happy

[tool.ruff.lint]
# Production code standards - strict
# Test-specific exemptions are in tests/ruff.toml
select = ["ALL"]
ignore = [
  "ANN",     # Type annotations (optional for now)
  "D",       # Docstrings (optional for now)
  "G004",    # logging-f-string (commonly needed)
  "RUF001",  # Ambiguous unicode (intentional in UI)
  "RUF002",  # Ambiguous unicode in docstrings
  "RUF003",  # Ambiguous unicode in comments
  "SLF001",  # Private member access (lazy loading patterns)
  "S301",    # Pickle usage (internal/trusted data)
  "S608",    # SQL injection (safe with placeholders)
  "F401",    # Unused import (handled separately)
]

[tool.ruff.lint.isort]
# so it knows to group first-party stuff last
known-first-party = ["st_name_ranking"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
