[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "poethepoet>=0.42.0",
  "ruff>=0.15.2",
  "prek>=0.3.3",
  "commitizen>=4.13.8",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-playwright>=0.7.2",
  "playwright==1.56.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
  "pytest-timeout>=2.4.0",
  "pytest-asyncio>=1.3.0",
  "ipython>=9.10.0",
  "ty>=0.0.18",
  "mkdocstrings-python>=2.0.3",
  "zensical>=0.0.23"
]

[project]
name = "st-name-ranking"
version = "0.1.0"
description = "Streamlit application to rank valid danish names"
readme = "README.md"
authors = [
  {name = "Jakob Stender Guldberg", email = "jakob1379@gmail.com"}
]
requires-python = ">=3.14,<3.15"
dependencies = [
  "httpx>=0.28.1",
  "ethnidata>=4.3.1",
  "unidecode>=1.3.8",
  "pycountry>=24.6.1",
  "numpy>=2.4.2",
  "pandas>=2.3.3",
  "rapidfuzz>=3.14.3",
  "metaphone",
  "pyphen>=0.17.2",
  "rich>=14.3.3",
  "sentence-transformers>=5.2.3",
  "streamlit>=1.54.0",
  "typer>=0.24.1"
]

[project.scripts]
name-db = "st_name_ranking.cli:app"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.poe.tasks]
clean = {shell = 'uvx pyclean -d=all --verbose .', help = "Clean python residuals"}
upgrade = {shell = 'uv sync --upgrade && uvx uv-bump; uvx prek autoupdate'}
htmlcov = "uv run python -m http.server -d htmlcov"
serve = "streamlit run src/st_name_ranking/main.py"

[tool.pyrefly]
python-version = "3.13"
search-path = ["src"]

[tool.pytest]
addopts = ["--doctest-modules", "--cov=st_name_ranking", "--cov-branch", "--cov-report=term-missing", "--cov-report=html", "--headed", "--exitfirst"]
testpaths = ["tests"]

[tool.ruff]
# if this is a library, enter the _minimum_ version you
# want to support, otherwise do py313
target-version = "py313"
line-length = 120 # use whatever number makes you happy

[tool.ruff.lint]
# Production code standards - strict
# Test-specific exemptions are in tests/ruff.toml
select = ["ALL"]
ignore = [
  "D",       # Docstrings (85 remaining - tackle incrementally)
  "RUF001",  # Ambiguous unicode (intentional for Danish names)
  "RUF002",  # Ambiguous unicode in docstrings
  "RUF003",  # Ambiguous unicode in comments
  "S301",    # Pickle - documented safe (internal data only)
  "S608",    # SQL - false positives with parameterized queries
  "S311",    # Random - UI demo only (not security)
  "ANN401",  # Any type - DataFrame row processing
]

[tool.ruff.lint.isort]
# so it knows to group first-party stuff last
known-first-party = ["st_name_ranking"]

[tool.ruff.lint.per-file-ignores]
# CLI entry points - print statements are user-facing output
"src/st_name_ranking/init_database.py" = ["T201"]
"src/st_name_ranking/classify_origins.py" = ["T201"]
# __main__ blocks for testing - print is acceptable
"src/st_name_ranking/origin_classifier.py" = ["T201"]
"src/st_name_ranking/database.py" = ["T201"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
