[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "poethepoet>=0.42.1",
  "ruff>=0.15.5",
  "prek>=0.3.4",
  "commitizen>=4.13.9",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-playwright>=0.7.2",
  "playwright==1.56.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
  "pytest-timeout>=2.4.0",
  "pytest-asyncio>=1.3.0",
  "ipython>=9.11.0",
  "ty>=0.0.21",
  "mkdocstrings-python>=2.0.3",
  "zensical>=0.0.24"
]

[project]
name = "st-name-ranking"
version = "0.1.0"
description = "Streamlit application to rank valid danish names"
readme = "README.md"
authors = [
  {name = "Jakob Stender Guldberg", email = "jakob1379@gmail.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
  "ethnidata>=4.4.0",
  "numpy>=2.4.2",
  "pandas>=2.3.3",
  "polars>=1.38.1",
  "rapidfuzz>=3.14.3",
  "metaphone",
  "pyphen>=0.17.2",
  "rich>=14.3.3",
  "streamlit>=1.55.0",
  "typer>=0.24.1"
]

[project.optional-dependencies]
semantic-search = [
  "sentence-transformers>=5.2.3"
]

[project.scripts]
st-name-ranking = "st_name_ranking.cli:app"

[tool.codespell]
ignore-words-list = "abd,ine,wil"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.poe.tasks]
clean = {shell = 'uvx pyclean -d=all --verbose .', help = "Clean python residuals"}
upgrade = {shell = 'uv sync --upgrade && uvx uv-bump; uvx prek autoupdate'}
htmlcov = "uv run python -m http.server -d htmlcov"
serve = "streamlit run src/st_name_ranking/main.py"

[tool.pyrefly]
python-version = "3.13"
search-path = ["src"]

[tool.pytest]
addopts = ["--doctest-modules", "--cov=st_name_ranking", "--cov-branch", "--cov-report=term-missing", "--cov-report=html", "--headed", "--exitfirst"]
testpaths = ["tests"]

[tool.ruff]
# if this is a library, enter the _minimum_ version you
# want to support, otherwise do py313
target-version = "py313"
line-length = 120 # use whatever number makes you happy

[tool.ruff.lint]
# Production code standards - strict
# Test-specific exemptions are in tests/ruff.toml
select = ["ALL"]
ignore = [
  "D", # Docstrings (85 remaining - tackle incrementally)
  "RUF001", # Ambiguous unicode (intentional for Danish names)
  "RUF002", # Ambiguous unicode in docstrings
  "RUF003", # Ambiguous unicode in comments
  "S301", # Pickle - documented safe (internal data only)
  "S608", # SQL - false positives with parameterized queries
  "S311", # Random - UI demo only (not security)
  "ANN401", # Any type - DataFrame row processing
  "B017", # Broad exception assertions in tests
  "C401", # Set comprehension preference in tests
  "E501", # Long lines in integration diagnostics
  "F821", # Undefined names in legacy test scaffolding
  "F841", # Unused locals in exploratory tests
  "PLR1714", # Explicit comparison style in tests
  "PT011", # Broad pytest.raises in integration tests
  "PT012", # Multi-statement pytest.raises blocks
  "PT017", # Assertions on exception objects in tests
  "RUF012", # Mutable class attrs in test doubles
  "RUF013", # Implicit Optional in test helpers
  "SIM105", # try/except/pass patterns in race-condition tests
  "SLF001", # Private member access in test setup
  "T201", # Print statements in scripts/tests
  "TRY002" # Generic exceptions in fault-injection tests
]

[tool.ruff.lint.isort]
# so it knows to group first-party stuff last
known-first-party = ["st_name_ranking"]

[tool.ruff.lint.per-file-ignores]
# CLI entry points - print statements are user-facing output
"src/st_name_ranking/init_database.py" = ["T201"]
# __main__ blocks for testing - print is acceptable
"src/st_name_ranking/origin_classifier.py" = ["T201"]
"src/st_name_ranking/data_loader.py" = ["C901"]
"src/st_name_ranking/database.py" = ["C901", "PLR0912", "PLR0915", "S603", "T201"]
"src/st_name_ranking/main.py" = ["C901", "PLR0912", "PLR0915"]
"src/st_name_ranking/ui.py" = ["C901", "PLR0912", "PLR0915"]
"scripts/*.py" = ["ANN201", "ASYNC240", "F821", "PLC0415", "PLR2004", "T201"]
"tests/*.py" = ["B017", "C401", "E501", "F821", "F841", "PLR1714", "PT011", "PT012", "PT017", "RUF012", "RUF013", "SIM105", "SLF001", "T201", "TRY002"]
"**/tests/*.py" = ["B017", "C401", "E501", "F821", "F841", "PLR1714", "PT011", "PT012", "PT017", "RUF012", "RUF013", "SIM105", "SLF001", "T201", "TRY002"]
"src/st_name_ranking/async_model.py" = ["ARG001", "B905", "PLC0415", "PLR2004", "TC001", "TRY300"]
"src/st_name_ranking/active_learning/queue.py" = ["BLE001", "C901", "EM101", "EM102", "PLC0415", "PLR0912", "PLR0915", "S110", "SIM105", "SLF001", "TRY003", "TRY400"]
"src/st_name_ranking/classify_origins.py" = ["ARG001", "E402", "F821", "SLF001", "TC003", "T201"]
"src/st_name_ranking/features.py" = ["B905", "BLE001", "EM101", "EM102", "FBT001", "FBT002", "PERF401", "PLR0913", "PLR2004", "RUF059", "S101", "TRY003"]
"src/st_name_ranking/model.py" = ["B007", "C901", "E501", "N806", "PLR0912", "PLR0915"]
"src/st_name_ranking/name_queue.py" = ["SLF001"]
"src/st_name_ranking/pair_queue.py" = ["G004", "PLR2004"]
"src/st_name_ranking/utils.py" = ["ANN202", "ARG001", "B905", "C901", "FBT001", "FBT002", "PLC0415", "PLR2004", "RET504", "S607", "SIM103", "SIM108", "SLF001"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
